--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="/output.css" rel="stylesheet">
+    <link href="output.css" rel="stylesheet">
 </head>
 <body class="bg-zinc-900 font-mono font-extrabold flex justify-center  ">
 
  
   
   <div class="text-zinc-100 text-8xl h-screen rounded-3xl space-y-12 w-fit p-20" >
-    <img class="w-1/2 mx-auto" src="/icon.svg" alt="">
+    <img class="w-1/2 mx-auto" src="icon.svg" alt="">
     <div class="space-y-5">
       <!-- <div class="bg-green-500">UP IN THE LAST 24HS</div> -->
       
@@ -27,5 +27,5 @@
 
 
 </body>
-<script src="/function.js"></script>
+<script src="function.js"></script>
 </html>
